Nuevo html terminado + personalización del boton

--- a/Pagina/Iniciar Sesion.html
+++ b/Pagina/Iniciar Sesion.html
@@ -35,7 +35,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="Iniciar Sesion.html">Iniciar Sesion</a>
               </li>
-          
+              <li class="nav-item">
+                <a class="nav-link" href="Nuestro Objetivo.html">Nuestro Objetivo</a>
+              </li>
         </div>
         </div>
         
@@ -87,7 +89,7 @@
       </div>
     </div>
 
-    <footer id="contactanos"> <button  type="button"  class="btn btn-primary">CONTACTANOS</button>
+    <footer class="footer" id="contactanos"> <button  type="button"  class="boton" class="btn">CONTACTANOS</button>
  
     </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
