--- a/Pagina/Quienes Somos.html
+++ b/Pagina/Quienes Somos.html
@@ -12,7 +12,7 @@
   </head>
   
    
-  <body>
+  <body class="videoencelu">
     <video id="videosurf" autoplay loop muted poster="FOTOS/surf.png">
       <source src="FOTOS/videosurf.mp4" type="video/mp4">
       </video>
@@ -40,7 +40,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="Iniciar Sesion.html">Iniciar Sesion</a>
                 </li>
-            
+                <li class="nav-item">
+                  <a class="nav-link" href="Nuestro Objetivo.html">Nuestro Objetivo</a>
+                </li>
           </div>
         </nav>
       </div>
