--- a/Pagina/Porque elegirnos.html
+++ b/Pagina/Porque elegirnos.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="container">
+<body class="videoencelu" class="container">
   <video id="videodefondo" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
     <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
   </video>
@@ -47,7 +47,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Iniciar Sesion.html">Iniciar Sesion</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link" href="Nuestro Objetivo.html">Nuestro Objetivo</a>
+            </li>
         </div>
     </nav>
 
@@ -129,8 +131,8 @@
       </div>
     </div>
   </section>
-  <footer id="contactanos"> <button type="button" class="btn btn-primary">CONTACTANOS</button>
-
+  <footer class="footer" id="contactanos"> <button  type="button"  class="boton" class="btn">CONTACTANOS</button>
+ 
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
