Meta keyword y quienes somos con texto y foto real

--- a/Pagina/Porque elegirnos.html
+++ b/Pagina/Porque elegirnos.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
+  <meta name=”keywords” content="Clases de windsurf, clases de windsurf, windsurf, windsurf foil, iqfoil, academia nautica, academia, nautica, optimist, navegar en buenos aires, clases de vela buenos aires">
   <meta name="description"
     content="¿Porque elegir sail academy? Porque a diferencia de la mayoria de las academias nosotros ofrecemos 3 servicios exclusivos que nadie mas tiene">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
