--- a/Pagina/Quienes Somos.html
+++ b/Pagina/Quienes Somos.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name=”keywords” content="Clases de windsurf, clases de windsurf, windsurf, windsurf foil, iqfoil, academia nautica, academia, nautica, optimist, navegar en buenos aires, clases de vela buenos aires">
     <meta name="description" content="Somos Matias Gimenez. Javier Gonzales y Pablo Ramirez, tres apasionados por el deporte y por enseñar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -57,33 +58,33 @@
 <section  class="row">
 <div data-aos="zoom-in" data-aos-duration="2000" id="persona1"  class="col-sm-12 col-md-4">
     <div class="card" >
-        <img src="FOTOS/quienes somos 1.jpg" class="card-img-top" alt="Foto Matias Gimenez">
+        <img src="FOTOS/jeronimo zotta.jpg" class="card-img-top" alt="Foto Jeronimo Zotta">
         <div class="card-body">
-            <p class="tipografia2">Kitesurfer | Surfer</p>
-            <h2 class="h3"> Matias Gimenez </h2>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, nemo.</p>
+            <p class="tipografia2">Windsurfer | Surfer</p>
+            <h2 class="h3"> Jeronimo Zotta </h2>
+          <p class="card-text">INTEGRANTE DEL EQUIPO OLIMPICO JUVENIL IQFOIL, TOP 9 EN EL ULTIMO MUNDIAL IQFOIL </p>
         </div>
       </div>
 </div>
 
 <div data-aos="zoom-in" data-aos-duration="3000" id="persona2"  class="col-sm-12 col-md-4">
     <div class="card" >
-        <img src="FOTOS/quienes somos 2.jpg" class="card-img-top" alt="Foto Javier Gonzales">
+        <img id="fotofran" src="FOTOS/francisco saubidet.jpg" class="card-img-top" alt="Foto Francisco Saubidet">
         <div class="card-body">
           <p class="tipografia2">Windsurfer | Wingfoiler</p>
-          <h2 class="h3"> Javier Gonzales </h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, libero!</p>
+          <h2 class="h3"> Francisco Saubidet </h2>
+          <p class="card-text">INTEGRANTE DEL EQUIPO OLIMPICO, MEDALLA DE ORO EN LAS OLIMPIADAS JUVENILES 2014</p>
         </div>
       </div>
 </div>
 
 <div data-aos="zoom-in" data-aos-duration="2000" id="persona3" class="col-sm-12 col-md-4">
     <div class="card" >
-        <img src="FOTOS/quienes somos 1.jpg" class="card-img-top" alt="Foto Pablo Ramirez">
+        <img src="FOTOS/matias zavala.jpg" class="card-img-top" alt="Foto Matias Zavala">
         <div class="card-body">
           <p class="tipografia2">Windsurfer | Kitesurfer</p>
-          <h2 class="h3"> Pablo Ramirez </h2>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, doloremque?</p>
+          <h2 class="h3"> Matias Zavala </h2>
+          <p class="card-text">EX WORLDCHAMPION EN FORMULA FOIL, REPRESENTANTE DE ARGENTINA EN KITESURF</p>
        
         </div>
     
