--- a/Pagina/Iniciar Sesion.html
+++ b/Pagina/Iniciar Sesion.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name=”keywords” content="iniciar sesion sail academy, Iniciar sesion sail academy, sail academy iniciar sesion">
         <meta charset="utf-8">
         <meta name="description" content=" Bienvenido! Que lindo verte de nuevo! Inicia Sesion en Sail Academy">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
