--- a/Pagina/Nuestro Objetivo.html
+++ b/Pagina/Nuestro Objetivo.html
@@ -3,18 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="description" content="Somos Matias Gimenez. Javier Gonzales y Pablo Ramirez, tres apasionados por el deporte y por enseñar">
+    <meta name=”keywords” content="Clases de windsurf, clases de windsurf, windsurf, windsurf foil, iqfoil, academia nautica, academia, nautica, optimist, navegar en buenos aires, clases de vela buenos aires">
+    <meta name="description" content="Nuestro objetivo: Sail Academy va mucho más allá de una simple academia náutica, nuestro objetivo es formar una nueva generación de jóvenes que representen al país en el alto rendimiento.
+    ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/estilos.css">
-<link rel="icon" type="image/x-icon" href="FOTOS/logo.png" />
+<link rel="icon" type="image/x-icon" href="FOTOS/logo.png" alt="Logo Sail Academy" />
 <title>Nuestro Objetivo </title>
   </head>
  <body>
-  <video id="videodefondo" autoplay loop muted poster="FOTOS/surf.png">
+  <video id="videodefondo" autoplay loop muted poster="FOTOS/videomute.png">
     <source src="FOTOS/Nuestroobjetivo.mp4" type="video/mp4">
     </video>
 
