--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     
     <meta charset="utf-8">
+    <meta name=”keywords” content="Clases de windsurf, clases de windsurf, windsurf, windsurf foil, iqfoil, academia nautica, academia, nautica, optimist, navegar en buenos aires, clases de vela buenos aires">
     <meta name="description" content="En esta academia entrenaras con atletas olimpicos y te asesoraran entrenadores de primer nivel">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="css/estilos.css">
