Todos los html y sass terminados con texto real

--- a/Pagina/Quienes Somos.html
+++ b/Pagina/Quienes Somos.html
@@ -58,7 +58,7 @@
 <section  class="row">
 <div data-aos="zoom-in" data-aos-duration="2000" id="persona1"  class="col-sm-12 col-md-4">
     <div class="card" >
-        <img src="FOTOS/jeronimo zotta.jpg" class="card-img-top" alt="Foto Jeronimo Zotta">
+        <img src="FOTOS/jeronimo zotta.jfif" class="card-img-top" alt="Foto Jeronimo Zotta">
         <div class="card-body">
             <p class="tipografia2">Windsurfer | Surfer</p>
             <h2 class="h3"> Jeronimo Zotta </h2>
@@ -69,7 +69,7 @@
 
 <div data-aos="zoom-in" data-aos-duration="3000" id="persona2"  class="col-sm-12 col-md-4">
     <div class="card" >
-        <img id="fotofran" src="FOTOS/francisco saubidet.jpg" class="card-img-top" alt="Foto Francisco Saubidet">
+        <img id="fotofran" src="FOTOS/fran.jpg" class="card-img-top" alt="Foto Francisco Saubidet">
         <div class="card-body">
           <p class="tipografia2">Windsurfer | Wingfoiler</p>
           <h2 class="h3"> Francisco Saubidet </h2>
@@ -102,9 +102,9 @@
       <br>
       <br>
       <br><br><br><br>
-<footer id="contactanos"> <button  type="button"  class="btn btn-primary">CONTACTANOS</button>
+      <footer class="footer" id="contactanos"> <button  type="button"  class="boton" class="btn">CONTACTANOS</button>
  
-</footer>
+      </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script>
