--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="pagina/FOTOS/entrenamiento 1.jpg" class="d-block w-100" alt="Foto de entrenamiento">
+        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQNRi00bSALIdg_nMiyvsd6vFHmasPjmRbXZYIovxWgBG3kD4t4" class="d-block w-100" alt="Foto de entrenamiento">
       </div>
       <div class="carousel-item">
         <img src="Pagina/FOTOS/entrenamiento 6.jpg" class="d-block w-100" alt="Foto de entrenamiento">
