--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="css/estilos.css">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <title>Sail Academy </title>
-<link rel="icon"  href="../Pagina/FOTOS/logo.png">
+<link rel="icon"  href="Pagina/FOTOS/logo.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
@@ -61,10 +61,10 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../Pagina/FOTOS/training2.jpg" class="d-block w-100" alt="Foto de entrenamiento">
+        <img src="Pagina/FOTOS/entrenamiento 6.jpg" class="d-block w-100" alt="Foto de entrenamiento">
       </div>
       <div class="carousel-item">
-        <img src="Pagina/FOTOS/entrenamiento 6.jpg" class="d-block w-100" alt="Foto de entrenamiento">
+        <img src="Pagina/FOTOS/training2.jpg" class="d-block w-100" alt="Foto de entrenamiento">
       </div>
       <div class="carousel-item">
         <img src="Pagina/FOTOS/entrenamiento 3.jpg" class="d-block w-100" alt="Foto de entrenamiento">
